feat: added on screen button inputs for player movement

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <canvas class="game"></canvas>
+    <div id="controls">
+      <div>
+        <button id="forward">forward</button>
+        <button id="left">left</button>
+        <button id="backward">backward</button>
+        <button id="right">right</button>
+      </div>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
