feat: added css styling to buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div>
         <button id="forward">forward</button>
         <button id="left">left</button>
-        <button id="backward">backward</button>
+        <button id="backward">back</button>
         <button id="right">right</button>
       </div>
     </div>
